--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.gms:play-services-vision:20.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation("com.squareup.okhttp3:okhttp:4.10.0")
+    //implementation 'com.fasterxml.jackson.dataformat.jackson-dataformat-xml:2.13.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
+
+
 }
